# askpass-cache

./: .gitignore  AGENTS.md  CONCEPT.md  Cargo.toml  IMPLEMENTATION_PLAN.md  README.md  flake.nix
crates/askpass-cache-clear/: Cargo.toml
crates/askpass-cache-clear/src/: main.rs
crates/askpass-cache-core/: Cargo.toml
crates/askpass-cache-core/src/: cache.rs  cache_id.rs  config.rs  crypto.rs  lib.rs  protocol.rs  traits.rs  types.rs
crates/askpass-cache-ctl/: Cargo.toml
crates/askpass-cache-ctl/src/: main.rs
crates/askpass-cached/: Cargo.toml
crates/askpass-cached/src/: daemon.rs  lib.rs  main.rs
crates/askpass-cached/src/socket/: manual.rs  mod.rs  systemd.rs
crates/askpass-client/: Cargo.toml
crates/askpass-client/src/: main.rs
crates/secure-askpass-core/: Cargo.toml
crates/secure-askpass-core/src/: cache.rs  cache_id.rs  lib.rs  protocol.rs  traits.rs  types.rs
crates/secure-askpass-daemon/: Cargo.toml
crates/secure-askpass-daemon/src/: daemon.rs  lib.rs  main.rs
crates/secure-askpass-daemon/src/prompt/: cli.rs  gtk4_prompt.rs  mock.rs  mod.rs
crates/secure-askpass-daemon/src/socket/: manual.rs  mod.rs  systemd.rs
nix/: devshell.nix  package.nix
nix/modules/: home-manager.nix  nixos.nix
