[package]
name = "askpass-cache-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
aes-gcm = { workspace = true }
secrecy = { workspace = true }
zeroize = { workspace = true }
memsec = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
proptest = "1"
tempfile = "3"
