[package]
name = "askpass-cache-ctl"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Control utility for the secure-askpass credential cache"

[dependencies]
secure-askpass-core = { path = "../secure-askpass-core" }
clap = { version = "4", features = ["derive"] }
anyhow = { workspace = true }
dirs = { workspace = true }
libc = { workspace = true }

[[bin]]
name = "askpass-cache-ctl"
path = "src/main.rs"
