[package]
name = "askpass-cache-ctl"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Control utility for the askpass-cache credential cache"

[dependencies]
askpass-cache-core = { path = "../askpass-cache-core" }
clap = { version = "4", features = ["derive"] }
anyhow = { workspace = true }
dirs = { workspace = true }
libc = { workspace = true }

[[bin]]
name = "askpass-cache-ctl"
path = "src/main.rs"
