[package]
name = "askpass-cached"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
askpass-cache-core = { path = "../askpass-cache-core" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-journald = "0.3"
anyhow = { workspace = true }
thiserror = { workspace = true }
dirs = { workspace = true }
libc = { workspace = true }
secrecy = { workspace = true }

[dev-dependencies]
tempfile = "3"

[lib]
name = "askpass_cached"
path = "src/lib.rs"

[[bin]]
name = "askpass-cached"
path = "src/main.rs"
