[package]
name = "askpass-client"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
secure-askpass-core = { path = "../secure-askpass-core" }
serde_json = { workspace = true }
zeroize = { workspace = true }
secrecy = { workspace = true }
dirs = { workspace = true }
anyhow = { workspace = true }
libc = { workspace = true }
gtk4 = { workspace = true }

[[bin]]
name = "askpass-client"
path = "src/main.rs"
