[package]
name = "secure-askpass-daemon"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
secure-askpass-core = { path = "../secure-askpass-core" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[[bin]]
name = "secure-askpass-daemon"
path = "src/main.rs"
