[package]
name = "secure-askpass-daemon"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
secure-askpass-core = { path = "../secure-askpass-core" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-journald = "0.3"
anyhow = { workspace = true }
thiserror = { workspace = true }
dirs = { workspace = true }
libc = { workspace = true }
secrecy = { workspace = true }

[dev-dependencies]
tempfile = "3"

[lib]
name = "secure_askpass_daemon"
path = "src/lib.rs"

[[bin]]
name = "secure-askpass-daemon"
path = "src/main.rs"
